@@ -2,61 +2,54 @@ package com.example.demo.service.impl;
 
 import com.example.demo.model.User;
 import com.example.demo.repository.UserRepository;
-import com.example.demo.security.JwtTokenProvider;
 import com.example.demo.service.UserService;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 @Service
 public class UserServiceImpl implements UserService {
-
+    
     private final UserRepository userRepository;
-    private final JwtTokenProvider jwtTokenProvider;
-
-    public UserServiceImpl(UserRepository userRepository,
-                           JwtTokenProvider jwtTokenProvider) {
+    private final PasswordEncoder passwordEncoder;
+    
+    public UserServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
-        this.jwtTokenProvider = jwtTokenProvider;
+        this.passwordEncoder = passwordEncoder;
     }
-
+    
     @Override
     public User register(String email, String password, String role) {
-
         if (userRepository.findByEmail(email).isPresent()) {
-            throw new IllegalArgumentException("Email must be unique");
+            throw new IllegalArgumentException("Email already exists");
         }
-
-        if (role == null || role.isBlank()) {
+        
+        if (role == null || role.trim().isEmpty()) {
             throw new IllegalArgumentException("Role is required");
         }
-
+        
         User user = new User();
         user.setEmail(email);
-        user.setPassword(password); // plain text (NO passwordEncoder)
+        user.setPassword(passwordEncoder.encode(password));
         user.setRole(role);
-
+        
         return userRepository.save(user);
     }
-
+    
     @Override
-    public String login(String email, String password) {
-
+    public User login(String email, String password) {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        if (!user.getPassword().equals(password)) {
-            throw new IllegalArgumentException("Invalid credentials");
+            .orElseThrow(() -> new RuntimeException("Invalid credentials"));
+        
+        if (!passwordEncoder.matches(password, user.getPassword())) {
+            throw new RuntimeException("Invalid credentials");
         }
-
-        return jwtTokenProvider.createToken(
-                user.getEmail(),
-                user.getRole(),
-                user.getId()
-        );
+        
+        return user;
     }
-
+    
     @Override
     public User getByEmail(String email) {
         return userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+            .orElseThrow(() -> new RuntimeException("User not found"));
     }
 }
